<resources>
    <string name="app_name">My Tasks</string>
    <string name="btn_new_task">Nova Tarefa</string>
    <string name="btn_my_tasks">Minhas tarefas</string>
    <string name="label_title">Titulo</string>
    <string name="placeholder_title">Digite o título da terefa</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_back">Voltar</string>
    <string name="message_form_invalid">Campo de título inválido</string>
    <string name="label_list_empty">Nenhum item disponível</string>
    <string name="dialog_title_delete_task">Deletar tarefa</string>
    <string name="dialog_message_delete_task">Gostaria de excluir a tarefa</string>
</resources>